# personal-dashboard

./: .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  app.py  deploy-streamlit-cloud.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
pages/: 01_Analytics.py  01_Finance.py  02_Data.py  02_Health.py
personal_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
utils/: db.py
