[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-dashboard"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.29.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "requests>=2.31.0",
    "yfinance>=0.2.28",
]

[tool.setuptools]
py-modules = []
